[tool.poetry]
name = "library managemet"
version = "0.1.0"
description = ""
authors = ["VarnikaB <1rn18cs115.varnika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
